--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div><label>Apoios (qtd)</label><input id="res-ap" type="number" min="0" value="0"></div>
       </div>
       <div class="row">
-        <div><label>Ações (qtd)</label><input id="res-ac" type="number" min="0" value="0"></div>
+        <div><label>Ações (Blipadas)</label><input id="res-ac" type="number" min="0" value="0"></div>
       </div>
     </div>
 
